# PyCheevos

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
core/: constants.py  helpers.py  readme.md  value.py
examples/: README.md
models/: achievement.py  readme.md
pycheevos/core/: condition.py  constants.py  helpers.py  readme.md  value.py
pycheevos/examples/: strings.md
pycheevos/models/: achievement.py  generic.py  leaderboard.py  readme.md  rich_presence.py  set.py
pycheevos/utils/: dump_notes.py  import_achievements.py  import_leaderboard.py  import_notes.py  import_set.py  importer.py  markdown.py  readme.md  sync.py  test_importer.py  test_leaderboard.py
scripts/: 23121.py  6675.json  6675.py  achievement_23121.py  leaderboard_23121.py  notes_23121.py  pulled.json
utils/: import_achievements.py  import_notes.py
