[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycheevos"
version = "0.0.6"
description = "A Python library to generate RetroAchievements scripts programmatically."
readme = "README.md"
authors = [
  { name = "Carlos Natanael" },
  { name = "Player1041" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["retroachievements", "achievements", "generator", "emulator", "ratools"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/CarlosNatanael/PyCheevos"
"Bug Tracker" = "https://github.com/CarlosNatanael/PyCheevos/issues"

[project.scripts]
pycheevos-import = "pycheevos.utils.importer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycheevos*"]